# agentic-ai

./: pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  app.py  requirements.txt
1_foundations/me/: summary.txt
3_crew/my_financial_researcher/: pyproject.toml  report.md  report_part1.md  report_part2.md  report_part3.md  requirements.txt
3_crew/my_financial_researcher/output/: report.md  report_part1.md  report_part2.md  report_part3.md
3_crew/my_financial_researcher/src/my_financial_researcher/: crew.py  main.py
3_crew/my_financial_researcher/src/my_financial_researcher/config/: agents.yaml  tasks.yaml
3_crew/my_stock_picker/: pyproject.toml  requirements.txt
3_crew/my_stock_picker/knowledge/: user_preference.txt
3_crew/my_stock_picker/output/: decision.md  research_report.json  trending_companies.json
3_crew/my_stock_picker/src/my_stock_picker/: crew.py  main.py
3_crew/my_stock_picker/src/my_stock_picker/config/: agents.yaml
3_crew/my_stock_picker/tools/: push_tool.py
